C2SPorter: validate JIDs to match sooner.

Previously the JID was not validated until a few functions deep from
wocky_c2s_porter_register_handler_from_by_stanza(), where it was checked
with g_assert(). This moves the validation further out, to the point
where we should have criticalled and returned.

https://bugs.freedesktop.org/show_bug.cgi?id=51528